--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
     <td><input type="checkbox" /></td>
-  </tr>
+  </tr>you can add some more funny functions in your code.
 </table>
 
 <h2 hidden>Game over, refresh to play again 🧑‍💻 🤖!</h2>
